# NeutrinoOS

./: .gitattributes  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  dependencies.sh
Documentation/: introduction.html  navbar.js  navpanel.js  style.css
Neutrino/: buildscript.py  ntrasm.py
Neutrino/ndk/: finishSetup.bat
Neutrino/ndk/include/: neutrino.ns
Neutrino/ndk/lib/: io.lmd  neutrino.lmd  ntrgui.lmd  timer.lmd  userlib.lmd  util.lmd  whiprt.lmd
Neutrino/src/: io.ns  neutrino.ns  test.ns  timer.ns  userlib.ns  util.ns
Neutrino/src/apps/: command.ns
Neutrino/src/sys/: userlib.ns  whiprt-old.ns  whiprt.ns
Neutrino/sys/: io.lnx  io.ns  neutrino.lnx  neutrino.ns  ntrgui.lnx  timer.lnx  timer.ns  userlib.lnx  userlib.ns  util.lnx  util.ns  whiprt.lnx  whiprt.ns  whiprtl.ns
NeutrinoOS/: CMakeLists.txt  CMakeSettings.json  Makefile  main.cpp
NeutrinoOS/NeutrinoOS/: CMakeLists.txt  main.cpp
NeutrinoOS/NeutrinoOS/components/TiwazUI/: U8g2lib.h  bitmaps.h  elements.cpp  elements.h  gpio.cpp  graphics.cpp  graphics.h  inputmgr.cpp  inputmgr.h  u8g2.h  u8x8.h  uiserialization.cpp  uiserialization.h  view.cpp  view.h  viewmgr.cpp  viewmgr.h
NeutrinoOS/NeutrinoOS/include/: arrayobj.h  bitconverter.h  components.h  containers.h  coreos.h  disassembler.h  dynamiclinker.h  event.h  filesystem.h  input.h  instruction.h  interrupts.h  iomgr.h  lvmgr.h  networking.h  nfsdimp.h  ntime.h  nvm.h  opcode.h  startup.h  syscall.h  sysinfo.h  textscreen.h  timer.h  util.h  vmmgr.h  vt.h  vtype.h
NeutrinoOS/NeutrinoOS/source/: arrayobj.cpp  bitconverter.cpp  coreos.cpp  disassembler.cpp  dynamiclinker.cpp  event.cpp  filesystem.cpp  input.cpp  instruction.cpp  iomgr.cpp  lvmgr.cpp  main.cpp  nfsdimp.cpp  ntime.cpp  nvm.cpp  syscall.cpp  textscreen.cpp  timer.cpp  util.cpp  vmmgr.cpp  vt.cpp
NeutrinoOS/components/EffigyWM/: element.cpp  element.h  graphics.cpp  graphics.h  window.cpp  window.h  winmgr.cpp  winmgr.h
NeutrinoOS/components/EffigyWM/sdl/draw/: SDL_framerate.h  SDL_gfxPrimitives.h
NeutrinoOS/components/EffigyWM/themes/: Honey.lnth  Light.lnth
NeutrinoOS/components/IOManager/: iomgr.cpp
NeutrinoOS/components/NFS/: nfsdimp.cpp  nfsdimp.h
NeutrinoOS/components/TiwazUI/: bitmaps.h  gpio.cpp  graphics.cpp  inputmgr.cpp  inputmgr.h  u8g2_esp32_hal.h  viewmgr.cpp  viewmgr.h
NeutrinoOS/esp32/NeutrinoOS/: CMakeLists.txt  Makefile  sdkconfig
NeutrinoOS/esp32/NeutrinoOS/main/: CMakeLists.txt  main.cpp
NeutrinoOS/esp32/NeutrinoOS/spiffs_image/: .neutrino
NeutrinoOS/esp32/NeutrinoOS/spiffs_image/Neutrino/sys/: io.lnx  neutrino.lnx  userlib.lnx  util.lnx  whiprt.lnx
NeutrinoOS/include/: bitconverter.h  components.h  config.h  containers.h  dynamiclinker.h  event.h  instruction.h  interrupts.h  iomgr.h  memorystats.h  nfsdimp.h  ntime.h  nvm.h  opcode.h  platformconfig.h  scheduler.h  startup.h  syscall.h  sysinfo.h  util.h  vmmem.h  vmmgr.h
NeutrinoOS/linux/: build.sh
NeutrinoOS/source/: arrayobj.cpp  bitconverter.cpp  components.cpp  config.cpp  disassembler.cpp  dynamiclinker.cpp  event.cpp  filesystem.cpp  instruction.cpp  iomgr.cpp  lvmgr.cpp  memorystats.cpp  nfsdimp.cpp  ntime.cpp  nvm.cpp  scheduler.cpp  syscall.cpp  timer.cpp  util.cpp  vmmem.cpp  vmmgr.cpp  vt.cpp
components/EffigyWM/: element.h  graphics.cpp  serialization.cpp  window.cpp  winmgr.cpp
components/EffigyWM/sdl/draw/: SDL_rotozoom.h
components/TiwazUI/: graphics.h  inputmgr.cpp  inputmgr.h  u8g2.h  u8x8.h  uiserialization.h  view.cpp  viewmgr.cpp
components/TiwazUI/u8g2/: u8g2_esp32_hal.h
esp32/NeutrinoOS/: README.md  sdkconfig  sdkconfig.old
esp32/NeutrinoOS/main/: main.cpp
esp32/NeutrinoOS/main/components/EffigyWM/: serialization.h  window.h  windowinfo.h
esp32/NeutrinoOS/main/components/EffigyWM/sdl/draw/: SDL_gfxBlitFunc.h  SDL_imageFilter.c
esp32/NeutrinoOS/main/components/IOManager/: iomgr.h
esp32/NeutrinoOS/main/components/TiwazUI/: U8g2lib.h  elements.cpp  elements.h  graphics.cpp  uiserialization.cpp  view.h
esp32/NeutrinoOS/main/components/TiwazUI/u8g2/: u8g2.h  u8g2_esp32_hal.cpp
esp32/NeutrinoOS/main/include/: arrayobj.h  components.h  input.h  kernlog.h  lvmgr.h  opcode.h  platformconfig.h  startup.h  timer.h  vmmgr.h  wdirent.h
esp32/NeutrinoOS/main/source/: disassembler.cpp  dynamiclinker.cpp  input.cpp  instruction.cpp  kernlog.cpp  memorystats.cpp  nvm.cpp  vt.cpp
esp32/NeutrinoOS/spiffs_image/Neutrino/: .neutrino
include/: components.h  containers.h  disassembler.h  dynamiclinker.h  filesystem.h  iapi.h  instruction.h  kernlog.h  ntime.h  nvm.h  opcode.h  platformconfig.h  scheduler.h  startup.h  syscall.h  sysinfo.h  vmmem.h  vmmgr.h  vt.h  vtype.h
linux/: Config.in  README.md  build.sh  external.desc  external.mk
linux/board/neutrino_i386/: fstab  kernel-i386.config  mkimage.sh
linux/board/neutrino_i386/rootfs_overlay/boot/grub/: grub.cfg
linux/board/neutrino_i386/rootfs_overlay/etc/: os-release  profile
linux/board/neutrino_i386/rootfs_overlay/etc/init.d/: S99clear
linux/configs/: neutrino_i386_defconfig
linux/package/bootsplash/: Config.in  S01bootsplash  bootsplash.mk
linux/package/bootsplash/source/: CMakeLists.txt  main.c
source/: disassembler.cpp  dynamiclinker.cpp  event.cpp  filesystem.cpp  instruction.cpp  kernlog.cpp  ntime.cpp  nvm.cpp  scheduler.cpp  syscall.cpp  util.cpp  vmmem.cpp  vmmgr.cpp
