set(u8g2_sources
    "components/TiwazUI/u8g2/u8x8_setup.c"
    "components/TiwazUI/u8g2/u8x8_u8toa.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1306_96x16.c"
    "components/TiwazUI/u8g2/u8g2_d_memory.c"
    "components/TiwazUI/u8g2/u8g2_selection_list.c"
    "components/TiwazUI/u8g2/u8g2_hvline.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1306_128x64_noname.c"
    "components/TiwazUI/u8g2/u8x8_message.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1306_48x64.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1305.c"
    "components/TiwazUI/u8g2/u8g2_kerning.c"
    "components/TiwazUI/u8g2/u8x8_input_value.c"
    "components/TiwazUI/u8g2/u8x8_d_st7586s_s028hn118a.c"
    "components/TiwazUI/u8g2/u8g2_polygon.c"
    "components/TiwazUI/u8g2/u8x8_d_uc1604.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1306_128x32.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1322.c"
    "components/TiwazUI/u8g2/u8x8_d_sbn1661.c"
    "components/TiwazUI/u8g2/u8g2_input_value.c"
    "components/TiwazUI/u8g2/u8x8_8x8.c"
    "components/TiwazUI/u8g2/u8x8_debounce.c"
    "components/TiwazUI/u8g2/u8x8_d_uc1638.c"
    "components/TiwazUI/u8g2/u8g2_setup.c"
    "components/TiwazUI/u8g2/u8x8_d_ist3020.c"
    "components/TiwazUI/u8g2/u8x8_display.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1317.c"
    "components/TiwazUI/u8g2/u8x8_d_ks0108.c"
    "components/TiwazUI/u8g2/u8g2_box.c"
    "components/TiwazUI/u8g2/u8x8_selection_list.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1326.c"
    "components/TiwazUI/u8g2/u8x8_d_st75256.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1309.c"
    "components/TiwazUI/u8g2/u8x8_byte.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1607_200x200.c"
    "components/TiwazUI/u8g2/u8x8_d_pcd8544_84x48.c"
    "components/TiwazUI/u8g2/u8log.c"
    "components/TiwazUI/u8g2/u8x8_d_sh1107.c"
    "components/TiwazUI/u8g2/u8log_u8x8.c"
    "components/TiwazUI/u8g2/u8g2_message.c"
    "components/TiwazUI/u8g2/u8x8_d_uc1610.c"
    "components/TiwazUI/u8g2/u8x8_d_sh1106_72x40.c"
    "components/TiwazUI/u8g2/u8g2_line.c"
    "components/TiwazUI/u8g2/u8g2_intersection.c"
    "components/TiwazUI/u8g2/u8g2_fonts.c"
    "components/TiwazUI/u8g2/u8x8_d_sh1106_64x32.c"
    "components/TiwazUI/u8g2/u8x8_d_sed1330.c"
    "components/TiwazUI/u8g2/u8x8_d_pcf8814_hx1230.c"
    "components/TiwazUI/u8g2/u8x8_d_il3820_296x128.c"
    "components/TiwazUI/u8g2/u8x8_d_uc1701_dogs102.c"
    "components/TiwazUI/u8g2/u8g2_cleardisplay.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1325.c"
    "components/TiwazUI/u8g2/u8g2_font.c"
    "components/TiwazUI/u8g2/u8x8_d_uc1601.c"
    "components/TiwazUI/u8g2/u8x8_d_pcf8812.c"
    "components/TiwazUI/u8g2/u8x8_cad.c"
    "components/TiwazUI/u8g2/u8x8_d_uc1611.c"
    "components/TiwazUI/u8g2/u8x8_string.c"
    "components/TiwazUI/u8g2/u8g2_ll_hvline.c"
    "components/TiwazUI/u8g2/u8x8_fonts.c"
    "components/TiwazUI/u8g2/u8x8_d_ld7032_60x32.c"
    "components/TiwazUI/u8g2/u8x8_d_max7219.c"
    "components/TiwazUI/u8g2/u8x8_d_st7588.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1606_172x72.c"
    "components/TiwazUI/u8g2/u8x8_d_st7586s_erc240160.c"
    "components/TiwazUI/u8g2/u8x8_d_stdio.c"
    "components/TiwazUI/u8g2/u8x8_d_sh1122.c"
    "components/TiwazUI/u8g2/u8log_u8g2.c"
    "components/TiwazUI/u8g2/u8g2_circle.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1306_64x48.c"
    "components/TiwazUI/u8g2/u8g2_buffer.c"
    "components/TiwazUI/u8g2/u8g2_bitmap.c"
    "components/TiwazUI/u8g2/u8x8_d_lc7981.c"
    "components/TiwazUI/u8g2/u8x8_d_st7920.c"
    "components/TiwazUI/u8g2/u8x8_d_t6963.c"
    "components/TiwazUI/u8g2/u8x8_d_st7567.c"
    "components/TiwazUI/u8g2/u8x8_d_ls013b7dh03.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1327.c"
    "components/TiwazUI/u8g2/u8x8_d_sh1108.c"
    "components/TiwazUI/u8g2/u8x8_gpio.c"
    "components/TiwazUI/u8g2/u8x8_d_uc1608.c"
    "components/TiwazUI/u8g2/u8x8_d_uc1617.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1329.c"
    "components/TiwazUI/u8g2/u8x8_d_ssd1306_64x32.c"
    "components/TiwazUI/u8g2/u8g2_d_setup.c"
    "components/TiwazUI/u8g2/u8x8_d_uc1701_mini12864.c"
    "components/TiwazUI/u8g2/u8x8_u16toa.c"
    "components/TiwazUI/u8g2/u8x8_d_a2printer.c"
    "components/TiwazUI/u8g2/u8x8_d_st7565.c")
set(sources
    "main.cpp"
    "source/arrayobj.cpp"
    "source/bitconverter.cpp"
    "source/config.cpp"
    "source/disassembler.cpp"
    "source/dynamiclinker.cpp"
    "source/event.cpp"
    "source/filesystem.cpp"
    "source/input.cpp"
    "source/instruction.cpp"
    "source/iomgr.cpp"
    "source/kernlog.cpp"
    "source/lvmgr.cpp"
    "source/memorystats.cpp"
    "source/nfsdimp.cpp"
    "source/ntime.cpp"
    "source/nvm.cpp"
    "source/scheduler.cpp"
    "source/syscall.cpp"
    "source/timer.cpp"
    "source/util.cpp"
    "source/vmmem.cpp"
    "source/vmmgr.cpp"
    "source/vt.cpp"
    "components/TiwazUI/elements.cpp"
    "components/TiwazUI/graphics.cpp"
    "components/TiwazUI/inputmgr.cpp"
    "components/TiwazUI/uiserialization.cpp"
    "components/TiwazUI/view.cpp"
    "components/TiwazUI/viewmgr.cpp"
    "components/TiwazUI/u8g2_esp32_hal.cpp"
)

set(includes
    "include"
    "components"
    "components/TiwazUI"
)

idf_component_register(SRCS "${sources}" "${u8g2_sources}" INCLUDE_DIRS "${includes}")

spiffs_create_partition_image(storage ../spiffs_image FLASH_IN_PROJECT)